--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "input": "^1.0.1",
     "label": "^0.2.2",
     "lucide-react": "^0.540.0",
+    "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.8.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
     "zod": "^4.0.17"
